--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,19 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+			<artifactId>gwtbootstrap3</artifactId>
+			<groupId>org.gwtbootstrap3</groupId>
+			<version>0.9</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.gwtbootstrap3</groupId>
+			<artifactId>gwtbootstrap3-extras</artifactId>
+			<version>0.9</version>
+		</dependency>
+		
   </dependencies>
   
   <build>
